--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,19 @@
 /classes
 /checkouts
 /dev-resources/public/js/*
+/dev-resources/public/css/*
+/resources/public/css/*
 /out
+/.idea
+/dev
+/script
 pom.xml
 *.jar
 *.class
+.lein-repl-history
+.nrepl-port
+Dockerfile
+figwheel_server.log
 .lein-deps-sum
 .lein-failures
 .lein-plugins
